package mycalendar.modele.exceptions;

public class MessageException {
}
